<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".home.HomeActivity">

    <item
        android:icon="@drawable/ic_filter_list_white"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="all">

                <item
                    android:id="@+id/action_filter_favorites"
                    android:title="@string/action_filter_favorites"/>

                <item
                    android:id="@+id/action_filter_unread"
                    android:title="@string/action_filter_unread"/>

            </group>

        </menu>

    </item>

    <item
        android:icon="@drawable/ic_sort_white"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom">

        <menu>

            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/action_sort_new"
                    android:checked="true"
                    android:title="@string/action_sort_new"/>

                <item
                    android:id="@+id/action_sort_old"
                    android:title="@string/action_sort_old"/>

            </group>

        </menu>

    </item>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
